Returning optional for all nullable fields